--- a/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/Base.lproj/Main.storyboard
@@ -34,19 +34,19 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R9j-ic-ozr">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R9j-ic-ozr">
                                 <rect key="frame" x="0.0" y="69.5" width="375" height="533.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="150" id="fES-sz-kED" customClass="CategoryCell" customModule="coder_swag" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="150" id="fES-sz-kED" customClass="CategoryCell" customModule="coder_swag" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fES-sz-kED" id="Pkn-xd-klw">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="digital" translatesAutoresizingMaskIntoConstraints="NO" id="7Cz-U3-oj0">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                                    <rect key="frame" x="0.0" y="3" width="375" height="143.5"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOODIES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mUf-5E-PGC">
                                                     <rect key="frame" x="131.5" y="58.5" width="112" height="33"/>
@@ -56,11 +56,11 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="7Cz-U3-oj0" secondAttribute="bottom" id="GjL-Jj-x4I"/>
+                                                <constraint firstAttribute="bottom" secondItem="7Cz-U3-oj0" secondAttribute="bottom" constant="3" id="GjL-Jj-x4I"/>
                                                 <constraint firstItem="mUf-5E-PGC" firstAttribute="centerY" secondItem="Pkn-xd-klw" secondAttribute="centerY" id="NCI-Wg-5Cd"/>
                                                 <constraint firstItem="7Cz-U3-oj0" firstAttribute="leading" secondItem="Pkn-xd-klw" secondAttribute="leading" id="Skx-Qr-qjd"/>
                                                 <constraint firstItem="mUf-5E-PGC" firstAttribute="centerX" secondItem="Pkn-xd-klw" secondAttribute="centerX" id="U7y-Bt-D66"/>
-                                                <constraint firstItem="7Cz-U3-oj0" firstAttribute="top" secondItem="Pkn-xd-klw" secondAttribute="top" id="Xqi-EK-R44"/>
+                                                <constraint firstItem="7Cz-U3-oj0" firstAttribute="top" secondItem="Pkn-xd-klw" secondAttribute="top" constant="3" id="Xqi-EK-R44"/>
                                                 <constraint firstAttribute="trailing" secondItem="7Cz-U3-oj0" secondAttribute="trailing" id="e8V-Xc-LWN"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -112,7 +112,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D8R-cP-J10" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-505" y="118"/>
+            <point key="canvasLocation" x="-266" y="118"/>
         </scene>
     </scenes>
     <resources>
